@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libbluray
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/ChangeLog,v 1.49 2013/06/25 12:51:43 ago Exp $
+
+*libbluray-0.5.0 (03 Mar 2014)
+
+  03 Mar 2014; Andrew John Hughes <gnu_andrew@member.fsf.org>
+  +libbluray-0.5.0.ebuild, libbluray-0.3.0-r1.ebuild:
+  Update to 0.5.0. Still not fixed upstream.
 
   24 Jul 2013; Andrew John Hughes <gnu_andrew@member.fsf.org>
   +files/90libbluray, +libbluray-0.3.0-r1.ebuild, +libbluray-9999.ebuild,
